<package format="2">
  <name>flexbe_app</name>
  <version>2.1.1</version>
  <description>
     flexbe_app provides a user interface (editor + runtime control) for the FlexBE behavior engine.
  </description>
  <maintainer email="schillinger@sim.tu-darmstadt.de">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/flexbe_app</url>
  <author>Philipp Schillinger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>genpy</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>flexbe_mirror</exec_depend>
  <exec_depend>flexbe_widget</exec_depend>
  <exec_depend>flexbe_onboard</exec_depend>
  <depend>npm</depend>

</package>
